--- a/trass.cabal
+++ b/trass.cabal
@@ -21,6 +21,7 @@ library
                      Settings.Development
                      Handler.Home
                      Handler.About
+                     Handler.Admin
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
