--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: haskell
 
+install:
+  - cabal install --force-reinstalls $(grep "yesod-platform\s*==" *.cabal | tr --delete ", ")
+  - cabal install --only-dependencies
+  - cabal install
+
