--- a/trass.cabal
+++ b/trass.cabal
@@ -16,6 +16,7 @@ library
                      Foundation
                      Import
                      Model
+                     CourseRepository
                      Settings
                      Settings.StaticFiles
                      Settings.Development
