--- a/trass.cabal
+++ b/trass.cabal
@@ -77,6 +77,7 @@ library
                  , monad-logger                  >= 0.3
                  , fast-logger                   >= 0.3
                  , process                       >= 1.1
+                 , filepath                      >= 1.3
 
 executable         trass
     if flag(library-only)
