--- a/trass.cabal
+++ b/trass.cabal
@@ -28,6 +28,7 @@ library
                      Handler.AdminCourse
                      Handler.Courses
                      Handler.Language
+                     Handler.Course
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
