--- a/trass.cabal
+++ b/trass.cabal
@@ -83,6 +83,7 @@ library
                  , filepath                      >= 1.3
                  , blaze-html                    >= 0.4
                  , markdown                      >= 0.1
+                 , highlighting-kate             >= 0.5
 
 executable         trass
     if flag(library-only)
