added CodeMirror module

--- a/trass.cabal
+++ b/trass.cabal
@@ -17,6 +17,7 @@ library
                      Import
                      Model
                      CourseRepository
+                     CodeMirror
                      Settings
                      Settings.StaticFiles
                      Settings.Development
