--- a/trass.cabal
+++ b/trass.cabal
@@ -20,6 +20,7 @@ library
                      Settings.StaticFiles
                      Settings.Development
                      Handler.Home
+                     Handler.TeacherCorner
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
