--- a/trass.cabal
+++ b/trass.cabal
@@ -16,6 +16,7 @@ library
                      Foundation
                      Import
                      Model
+                     CourseRepository
                      Settings
                      Settings.StaticFiles
                      Settings.Development
@@ -69,6 +70,9 @@ library
                  , conduit                       >= 1.0
                  , monad-logger                  >= 0.3
                  , fast-logger                   >= 0.3
+                 , markdown                      >= 0.1
+                 , highlighting-kate             >= 0.5
+                 , filepath                      >= 1.3
 
 executable         trass
     if flag(library-only)
