--- a/trass.cabal
+++ b/trass.cabal
@@ -76,6 +76,7 @@ library
                  , markdown                      >= 0.1
                  , highlighting-kate             >= 0.5
                  , filepath                      >= 1.3
+                 , process                       >= 1.1
 
 executable         trass
     if flag(library-only)
