--- a/trass.cabal
+++ b/trass.cabal
@@ -24,6 +24,7 @@ library
                      Handler.TeacherCorner
                      Handler.TeacherCourses
                      Handler.TeacherNewCourse
+                     Handler.Course
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
