--- a/trass.cabal
+++ b/trass.cabal
@@ -16,6 +16,7 @@ library
                      Foundation
                      Import
                      Model
+                     CodeMirror
                      CourseRepository
                      Settings
                      Settings.StaticFiles
@@ -82,6 +83,7 @@ library
                  , filepath                      >= 1.3
                  , process                       >= 1.1
                  , yaml-config                   >= 0.2
+                 , containers                    >= 0.5
 
 executable         trass
     if flag(library-only)
